Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextObjectField.quorum
class Main
    Object v
    v:SetValue()
    action Main
        Test(v)
    end

    action Test(text var)
    end
end
